# mp42srt

./: .gitignore  README.md  audio_processor.py  main.py  pyproject.toml  srt_generator.py  transcriber.py  utils.py
