[project]
name = "mp4-2-srt"
version = "0.1.0"
description = "A CLI tool to convert MP4 video to SRT subtitles using Google's Speech-to-Text API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "ffmpeg-python",
    "google-cloud-speech",
    "google-cloud-storage",
    "halo"
]

[tool.setuptools]
py-modules = [
    "main",
    "audio_processor",
    "transcriber",
    "srt_generator",
    "utils",
]
